--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "blockexplorer",
+  "name": "blockexplorer-alchemy-bootcamp",
+  "homepage": "https://olivmath.github.io/blockexplorer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^12.0.0",
     "alchemy-sdk": "^2.2.3",
     "ethers": "^6.11.0",
+    "gh-pages": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.4",
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
